// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`containers/forms/PlanForm renders correctly: date field 1`] = `
<input
  className="ant-input"
  id="date"
  name="date"
  onBlur={[Function]}
  onChange={[Function]}
  onFocus={[Function]}
  onKeyDown={[Function]}
  type="hidden"
  value={"2017-07-13T19:31:00.000Z"}
/>
`;

exports[`containers/forms/PlanForm renders correctly: end field 1`] = `
<input
  autoComplete="off"
  disabled={false}
  id="end"
  onBlur={[Function]}
  onChange={[Function]}
  onFocus={[Function]}
  onKeyDown={[Function]}
  onMouseDown={[Function]}
  placeholder="Select date"
  readOnly={true}
  size={12}
  title="2017-08-02"
  value="2017-08-02"
/>
`;

exports[`containers/forms/PlanForm renders correctly: end label 1`] = `null`;

exports[`containers/forms/PlanForm renders correctly: identifier field 1`] = `
<input
  className="ant-input"
  id="identifier"
  onBlur={[Function]}
  onChange={[Function]}
  onFocus={[Function]}
  onKeyDown={[Function]}
  readOnly={true}
  type="hidden"
  value=""
/>
`;

exports[`containers/forms/PlanForm renders correctly: interventionType field 1`] = `null`;

exports[`containers/forms/PlanForm renders correctly: name field 1`] = `
<input
  className="ant-input"
  id="name"
  onBlur={[Function]}
  onChange={[Function]}
  onFocus={[Function]}
  onKeyDown={[Function]}
  type="hidden"
  value=""
/>
`;

exports[`containers/forms/PlanForm renders correctly: start field 1`] = `
<input
  autoComplete="off"
  disabled={false}
  id="start"
  onBlur={[Function]}
  onChange={[Function]}
  onFocus={[Function]}
  onKeyDown={[Function]}
  onMouseDown={[Function]}
  placeholder="Select date"
  readOnly={true}
  size={12}
  title="2017-07-13"
  value="2017-07-13"
/>
`;

exports[`containers/forms/PlanForm renders correctly: start label 1`] = `null`;

exports[`containers/forms/PlanForm renders correctly: status field 1`] = `null`;

exports[`containers/forms/PlanForm renders correctly: status label 1`] = `null`;

exports[`containers/forms/PlanForm renders correctly: submit button 1`] = `
<button
  aria-label="Save Plan"
  className="ant-btn ant-btn-primary"
  disabled={false}
  id="planform-submit-button"
  onClick={[Function]}
  type="button"
>
  <LoadingIcon
    existIcon={false}
    loading={false}
    prefixCls="ant-btn"
  >
    <CSSMotion
      motionName="ant-btn-loading-icon-motion"
      onAppearActive={[Function]}
      onAppearStart={[Function]}
      onEnterActive={[Function]}
      onEnterStart={[Function]}
      onLeaveActive={[Function]}
      onLeaveStart={[Function]}
      removeOnLeave={true}
      visible={false}
    >
      <DomWrapper />
    </CSSMotion>
  </LoadingIcon>
  <span
    key=".0"
  >
    Save Plan
  </span>
</button>
`;

exports[`containers/forms/PlanForm renders correctly: taskGenerationStatus field 1`] = `
<input
  className="ant-input"
  id="taskGenerationStatus"
  onBlur={[Function]}
  onChange={[Function]}
  onFocus={[Function]}
  onKeyDown={[Function]}
  readOnly={true}
  type="hidden"
  value="internal"
/>
`;

exports[`containers/forms/PlanForm renders correctly: title field 1`] = `
<input
  className="ant-input"
  disabled={false}
  id="title"
  onBlur={[Function]}
  onChange={[Function]}
  onFocus={[Function]}
  onKeyDown={[Function]}
  required={true}
  type="text"
  value=""
/>
`;

exports[`containers/forms/PlanForm renders correctly: title label 1`] = `null`;

exports[`containers/forms/PlanForm renders correctly: version field 1`] = `
<input
  className="ant-input"
  id="version"
  onBlur={[Function]}
  onChange={[Function]}
  onFocus={[Function]}
  onKeyDown={[Function]}
  readOnly={true}
  type="hidden"
  value="1"
/>
`;

exports[`containers/forms/PlanForm renders dynamic plans correctly: conditions inputs 0 1`] = `null`;

exports[`containers/forms/PlanForm renders dynamic plans correctly: conditions inputs 1 1`] = `null`;

exports[`containers/forms/PlanForm renders dynamic plans correctly: conditions inputs 2 1`] = `null`;

exports[`containers/forms/PlanForm renders dynamic plans correctly: conditions inputs 3 1`] = `null`;

exports[`containers/forms/PlanForm renders dynamic plans correctly: conditions inputs 4 1`] = `null`;

exports[`containers/forms/PlanForm renders dynamic plans correctly: conditions inputs 5 1`] = `null`;

exports[`containers/forms/PlanForm renders dynamic plans correctly: conditions inputs 6 1`] = `null`;

exports[`containers/forms/PlanForm renders dynamic plans correctly: conditions inputs 7 1`] = `null`;

exports[`containers/forms/PlanForm renders dynamic plans correctly: conditions inputs 8 1`] = `null`;

exports[`containers/forms/PlanForm renders dynamic plans correctly: conditions inputs 9 1`] = `null`;

exports[`containers/forms/PlanForm renders dynamic plans correctly: conditions inputs 10 1`] = `null`;

exports[`containers/forms/PlanForm renders dynamic plans correctly: conditions inputs 11 1`] = `null`;

exports[`containers/forms/PlanForm renders dynamic plans correctly: conditions labels 0 1`] = `
Array [
  <label
    className=""
    htmlFor="planForm_activities_0_condition_0_expression"
    title="Expression"
  >
    Expression
  </label>,
  <label
    className=""
    htmlFor="planForm_activities_0_condition_0_description"
    title="Description"
  >
    Description
  </label>,
]
`;

exports[`containers/forms/PlanForm renders dynamic plans correctly: conditions labels 1 1`] = `
Array [
  <label
    className=""
    htmlFor="planForm_activities_0_condition_0_expression"
    title="Expression"
  >
    Expression
  </label>,
  <label
    className=""
    htmlFor="planForm_activities_0_condition_0_description"
    title="Description"
  >
    Description
  </label>,
]
`;

exports[`containers/forms/PlanForm renders dynamic plans correctly: conditions labels 2 1`] = `
Array [
  <label
    className=""
    htmlFor="planForm_activities_0_condition_0_expression"
    title="Expression"
  >
    Expression
  </label>,
  <label
    className=""
    htmlFor="planForm_activities_0_condition_0_description"
    title="Description"
  >
    Description
  </label>,
]
`;

exports[`containers/forms/PlanForm renders dynamic plans correctly: conditions labels 3 1`] = `
Array [
  <label
    className=""
    htmlFor="planForm_activities_1_condition_0_expression"
    title="Expression"
  >
    Expression
  </label>,
  <label
    className=""
    htmlFor="planForm_activities_1_condition_0_description"
    title="Description"
  >
    Description
  </label>,
]
`;

exports[`containers/forms/PlanForm renders dynamic plans correctly: conditions labels 4 1`] = `
Array [
  <label
    className=""
    htmlFor="planForm_activities_1_condition_0_expression"
    title="Expression"
  >
    Expression
  </label>,
  <label
    className=""
    htmlFor="planForm_activities_1_condition_0_description"
    title="Description"
  >
    Description
  </label>,
]
`;

exports[`containers/forms/PlanForm renders dynamic plans correctly: conditions labels 5 1`] = `
Array [
  <label
    className=""
    htmlFor="planForm_activities_1_condition_0_expression"
    title="Expression"
  >
    Expression
  </label>,
  <label
    className=""
    htmlFor="planForm_activities_1_condition_0_description"
    title="Description"
  >
    Description
  </label>,
]
`;

exports[`containers/forms/PlanForm renders dynamic plans correctly: conditions labels 6 1`] = `
Array [
  <label
    className=""
    htmlFor="planForm_activities_2_condition_0_expression"
    title="Expression"
  >
    Expression
  </label>,
  <label
    className=""
    htmlFor="planForm_activities_2_condition_0_description"
    title="Description"
  >
    Description
  </label>,
]
`;

exports[`containers/forms/PlanForm renders dynamic plans correctly: conditions labels 7 1`] = `
Array [
  <label
    className=""
    htmlFor="planForm_activities_2_condition_0_expression"
    title="Expression"
  >
    Expression
  </label>,
  <label
    className=""
    htmlFor="planForm_activities_2_condition_0_description"
    title="Description"
  >
    Description
  </label>,
]
`;

exports[`containers/forms/PlanForm renders dynamic plans correctly: conditions labels 8 1`] = `
Array [
  <label
    className=""
    htmlFor="planForm_activities_2_condition_0_expression"
    title="Expression"
  >
    Expression
  </label>,
  <label
    className=""
    htmlFor="planForm_activities_2_condition_0_description"
    title="Description"
  >
    Description
  </label>,
]
`;

exports[`containers/forms/PlanForm renders dynamic plans correctly: conditions labels 9 1`] = `
Array [
  <label
    className=""
    htmlFor="planForm_activities_3_condition_0_expression"
    title="Expression"
  >
    Expression
  </label>,
  <label
    className=""
    htmlFor="planForm_activities_3_condition_0_description"
    title="Description"
  >
    Description
  </label>,
]
`;

exports[`containers/forms/PlanForm renders dynamic plans correctly: conditions labels 10 1`] = `
Array [
  <label
    className=""
    htmlFor="planForm_activities_3_condition_0_expression"
    title="Expression"
  >
    Expression
  </label>,
  <label
    className=""
    htmlFor="planForm_activities_3_condition_0_description"
    title="Description"
  >
    Description
  </label>,
]
`;

exports[`containers/forms/PlanForm renders dynamic plans correctly: conditions labels 11 1`] = `
Array [
  <label
    className=""
    htmlFor="planForm_activities_3_condition_0_expression"
    title="Expression"
  >
    Expression
  </label>,
  <label
    className=""
    htmlFor="planForm_activities_3_condition_0_description"
    title="Description"
  >
    Description
  </label>,
]
`;

exports[`containers/forms/PlanForm renders dynamic plans correctly: conditions legends 0 1`] = `
<legend>
  Conditions
</legend>
`;

exports[`containers/forms/PlanForm renders dynamic plans correctly: conditions legends 1 1`] = `
<legend>
  Conditions
</legend>
`;

exports[`containers/forms/PlanForm renders dynamic plans correctly: conditions legends 2 1`] = `
<legend>
  Conditions
</legend>
`;

exports[`containers/forms/PlanForm renders dynamic plans correctly: conditions legends 3 1`] = `
<legend>
  Conditions
</legend>
`;

exports[`containers/forms/PlanForm renders dynamic plans correctly: conditions legends 4 1`] = `
<legend>
  Conditions
</legend>
`;

exports[`containers/forms/PlanForm renders dynamic plans correctly: conditions legends 5 1`] = `
<legend>
  Conditions
</legend>
`;

exports[`containers/forms/PlanForm renders dynamic plans correctly: conditions legends 6 1`] = `
<legend>
  Conditions
</legend>
`;

exports[`containers/forms/PlanForm renders dynamic plans correctly: conditions legends 7 1`] = `
<legend>
  Conditions
</legend>
`;

exports[`containers/forms/PlanForm renders dynamic plans correctly: conditions legends 8 1`] = `
<legend>
  Conditions
</legend>
`;

exports[`containers/forms/PlanForm renders dynamic plans correctly: conditions legends 9 1`] = `
<legend>
  Conditions
</legend>
`;

exports[`containers/forms/PlanForm renders dynamic plans correctly: conditions legends 10 1`] = `
<legend>
  Conditions
</legend>
`;

exports[`containers/forms/PlanForm renders dynamic plans correctly: conditions legends 11 1`] = `
<legend>
  Conditions
</legend>
`;

exports[`containers/forms/PlanForm renders dynamic plans correctly: conditions textareas 0 1`] = `
Array [
  <textarea
    className="ant-input form-control col-sm-10"
    disabled={false}
    id="activities[0].condition[0].expression"
    onChange={[Function]}
    onKeyDown={[Function]}
    required={true}
    style={Object {}}
    value="$this.is(FHIR.Device)"
  />,
  <textarea
    className="ant-input form-control col-sm-10"
    disabled={false}
    id="activities[0].condition[0].description"
    onChange={[Function]}
    onKeyDown={[Function]}
    required={true}
    style={Object {}}
    value="Product exists"
  />,
]
`;

exports[`containers/forms/PlanForm renders dynamic plans correctly: conditions textareas 1 1`] = `
Array [
  <textarea
    className="ant-input form-control col-sm-10"
    disabled={false}
    id="activities[0].condition[0].expression"
    onChange={[Function]}
    onKeyDown={[Function]}
    required={true}
    style={Object {}}
    value="$this.is(FHIR.Device)"
  />,
  <textarea
    className="ant-input form-control col-sm-10"
    disabled={false}
    id="activities[0].condition[0].description"
    onChange={[Function]}
    onKeyDown={[Function]}
    required={true}
    style={Object {}}
    value="Product exists"
  />,
]
`;

exports[`containers/forms/PlanForm renders dynamic plans correctly: conditions textareas 2 1`] = `
Array [
  <textarea
    className="ant-input form-control col-sm-10"
    disabled={false}
    id="activities[0].condition[0].expression"
    onChange={[Function]}
    onKeyDown={[Function]}
    required={true}
    style={Object {}}
    value="$this.is(FHIR.Device)"
  />,
  <textarea
    className="ant-input form-control col-sm-10"
    disabled={false}
    id="activities[0].condition[0].description"
    onChange={[Function]}
    onKeyDown={[Function]}
    required={true}
    style={Object {}}
    value="Product exists"
  />,
]
`;

exports[`containers/forms/PlanForm renders dynamic plans correctly: conditions textareas 3 1`] = `
Array [
  <textarea
    className="ant-input form-control col-sm-10"
    disabled={false}
    id="activities[1].condition[0].expression"
    onChange={[Function]}
    onKeyDown={[Function]}
    required={true}
    style={Object {}}
    value="$this.is(FHIR.QuestionnaireResponse)"
  />,
  <textarea
    className="ant-input form-control col-sm-10"
    disabled={false}
    id="activities[1].condition[0].description"
    onChange={[Function]}
    onKeyDown={[Function]}
    required={true}
    style={Object {}}
    value="Product exists"
  />,
]
`;

exports[`containers/forms/PlanForm renders dynamic plans correctly: conditions textareas 4 1`] = `
Array [
  <textarea
    className="ant-input form-control col-sm-10"
    disabled={false}
    id="activities[1].condition[0].expression"
    onChange={[Function]}
    onKeyDown={[Function]}
    required={true}
    style={Object {}}
    value="$this.is(FHIR.QuestionnaireResponse)"
  />,
  <textarea
    className="ant-input form-control col-sm-10"
    disabled={false}
    id="activities[1].condition[0].description"
    onChange={[Function]}
    onKeyDown={[Function]}
    required={true}
    style={Object {}}
    value="Product exists"
  />,
]
`;

exports[`containers/forms/PlanForm renders dynamic plans correctly: conditions textareas 5 1`] = `
Array [
  <textarea
    className="ant-input form-control col-sm-10"
    disabled={false}
    id="activities[1].condition[0].expression"
    onChange={[Function]}
    onKeyDown={[Function]}
    required={true}
    style={Object {}}
    value="$this.is(FHIR.QuestionnaireResponse)"
  />,
  <textarea
    className="ant-input form-control col-sm-10"
    disabled={false}
    id="activities[1].condition[0].description"
    onChange={[Function]}
    onKeyDown={[Function]}
    required={true}
    style={Object {}}
    value="Product exists"
  />,
]
`;

exports[`containers/forms/PlanForm renders dynamic plans correctly: conditions textareas 6 1`] = `
Array [
  <textarea
    className="ant-input form-control col-sm-10"
    disabled={false}
    id="activities[2].condition[0].expression"
    onChange={[Function]}
    onKeyDown={[Function]}
    required={true}
    style={Object {}}
    value="$this.identifier.where(id='hasGeometry').value='false'"
  />,
  <textarea
    className="ant-input form-control col-sm-10"
    disabled={false}
    id="activities[2].condition[0].description"
    onChange={[Function]}
    onKeyDown={[Function]}
    required={true}
    style={Object {}}
    value="Service point does not have geometry"
  />,
]
`;

exports[`containers/forms/PlanForm renders dynamic plans correctly: conditions textareas 7 1`] = `
Array [
  <textarea
    className="ant-input form-control col-sm-10"
    disabled={false}
    id="activities[2].condition[0].expression"
    onChange={[Function]}
    onKeyDown={[Function]}
    required={true}
    style={Object {}}
    value="$this.identifier.where(id='hasGeometry').value='false'"
  />,
  <textarea
    className="ant-input form-control col-sm-10"
    disabled={false}
    id="activities[2].condition[0].description"
    onChange={[Function]}
    onKeyDown={[Function]}
    required={true}
    style={Object {}}
    value="Service point does not have geometry"
  />,
]
`;

exports[`containers/forms/PlanForm renders dynamic plans correctly: conditions textareas 8 1`] = `
Array [
  <textarea
    className="ant-input form-control col-sm-10"
    disabled={false}
    id="activities[2].condition[0].expression"
    onChange={[Function]}
    onKeyDown={[Function]}
    required={true}
    style={Object {}}
    value="$this.identifier.where(id='hasGeometry').value='false'"
  />,
  <textarea
    className="ant-input form-control col-sm-10"
    disabled={false}
    id="activities[2].condition[0].description"
    onChange={[Function]}
    onKeyDown={[Function]}
    required={true}
    style={Object {}}
    value="Service point does not have geometry"
  />,
]
`;

exports[`containers/forms/PlanForm renders dynamic plans correctly: conditions textareas 9 1`] = `
Array [
  <textarea
    className="ant-input form-control col-sm-10"
    disabled={false}
    id="activities[3].condition[0].expression"
    onChange={[Function]}
    onKeyDown={[Function]}
    required={true}
    style={Object {}}
    value="$this.is(FHIR.Location)"
  />,
  <textarea
    className="ant-input form-control col-sm-10"
    disabled={false}
    id="activities[3].condition[0].description"
    onChange={[Function]}
    onKeyDown={[Function]}
    required={true}
    style={Object {}}
    value="All service points"
  />,
]
`;

exports[`containers/forms/PlanForm renders dynamic plans correctly: conditions textareas 10 1`] = `
Array [
  <textarea
    className="ant-input form-control col-sm-10"
    disabled={false}
    id="activities[3].condition[0].expression"
    onChange={[Function]}
    onKeyDown={[Function]}
    required={true}
    style={Object {}}
    value="$this.is(FHIR.Location)"
  />,
  <textarea
    className="ant-input form-control col-sm-10"
    disabled={false}
    id="activities[3].condition[0].description"
    onChange={[Function]}
    onKeyDown={[Function]}
    required={true}
    style={Object {}}
    value="All service points"
  />,
]
`;

exports[`containers/forms/PlanForm renders dynamic plans correctly: conditions textareas 11 1`] = `
Array [
  <textarea
    className="ant-input form-control col-sm-10"
    disabled={false}
    id="activities[3].condition[0].expression"
    onChange={[Function]}
    onKeyDown={[Function]}
    required={true}
    style={Object {}}
    value="$this.is(FHIR.Location)"
  />,
  <textarea
    className="ant-input form-control col-sm-10"
    disabled={false}
    id="activities[3].condition[0].description"
    onChange={[Function]}
    onKeyDown={[Function]}
    required={true}
    style={Object {}}
    value="All service points"
  />,
]
`;

exports[`containers/forms/PlanForm renders dynamic plans correctly: triggers inputs 0 1`] = `
<input
  className="ant-input form-control col-sm-10"
  disabled={false}
  id="activities[0].trigger[0].name"
  onBlur={[Function]}
  onChange={[Function]}
  onFocus={[Function]}
  onKeyDown={[Function]}
  required={true}
  type="text"
  value="plan-activation"
/>
`;

exports[`containers/forms/PlanForm renders dynamic plans correctly: triggers inputs 1 1`] = `
<input
  className="ant-input form-control col-sm-10"
  disabled={false}
  id="activities[0].trigger[0].name"
  onBlur={[Function]}
  onChange={[Function]}
  onFocus={[Function]}
  onKeyDown={[Function]}
  required={true}
  type="text"
  value="plan-activation"
/>
`;

exports[`containers/forms/PlanForm renders dynamic plans correctly: triggers inputs 2 1`] = `
<input
  className="ant-input form-control col-sm-10"
  disabled={false}
  id="activities[0].trigger[0].name"
  onBlur={[Function]}
  onChange={[Function]}
  onFocus={[Function]}
  onKeyDown={[Function]}
  required={true}
  type="text"
  value="plan-activation"
/>
`;

exports[`containers/forms/PlanForm renders dynamic plans correctly: triggers inputs 3 1`] = `
<input
  className="ant-input form-control col-sm-10"
  disabled={false}
  id="activities[1].trigger[0].name"
  onBlur={[Function]}
  onChange={[Function]}
  onFocus={[Function]}
  onKeyDown={[Function]}
  required={true}
  type="text"
  value="event-submission"
/>
`;

exports[`containers/forms/PlanForm renders dynamic plans correctly: triggers inputs 4 1`] = `
<input
  className="ant-input form-control col-sm-10"
  disabled={false}
  id="activities[1].trigger[0].name"
  onBlur={[Function]}
  onChange={[Function]}
  onFocus={[Function]}
  onKeyDown={[Function]}
  required={true}
  type="text"
  value="event-submission"
/>
`;

exports[`containers/forms/PlanForm renders dynamic plans correctly: triggers inputs 5 1`] = `
<input
  className="ant-input form-control col-sm-10"
  disabled={false}
  id="activities[1].trigger[0].name"
  onBlur={[Function]}
  onChange={[Function]}
  onFocus={[Function]}
  onKeyDown={[Function]}
  required={true}
  type="text"
  value="event-submission"
/>
`;

exports[`containers/forms/PlanForm renders dynamic plans correctly: triggers inputs 6 1`] = `
<input
  className="ant-input form-control col-sm-10"
  disabled={false}
  id="activities[2].trigger[0].name"
  onBlur={[Function]}
  onChange={[Function]}
  onFocus={[Function]}
  onKeyDown={[Function]}
  required={true}
  type="text"
  value="plan-activation"
/>
`;

exports[`containers/forms/PlanForm renders dynamic plans correctly: triggers inputs 7 1`] = `
<input
  className="ant-input form-control col-sm-10"
  disabled={false}
  id="activities[2].trigger[0].name"
  onBlur={[Function]}
  onChange={[Function]}
  onFocus={[Function]}
  onKeyDown={[Function]}
  required={true}
  type="text"
  value="plan-activation"
/>
`;

exports[`containers/forms/PlanForm renders dynamic plans correctly: triggers inputs 8 1`] = `
<input
  className="ant-input form-control col-sm-10"
  disabled={false}
  id="activities[2].trigger[0].name"
  onBlur={[Function]}
  onChange={[Function]}
  onFocus={[Function]}
  onKeyDown={[Function]}
  required={true}
  type="text"
  value="plan-activation"
/>
`;

exports[`containers/forms/PlanForm renders dynamic plans correctly: triggers inputs 9 1`] = `
<input
  className="ant-input form-control col-sm-10"
  disabled={false}
  id="activities[3].trigger[0].name"
  onBlur={[Function]}
  onChange={[Function]}
  onFocus={[Function]}
  onKeyDown={[Function]}
  required={true}
  type="text"
  value="plan-activation"
/>
`;

exports[`containers/forms/PlanForm renders dynamic plans correctly: triggers inputs 10 1`] = `
<input
  className="ant-input form-control col-sm-10"
  disabled={false}
  id="activities[3].trigger[0].name"
  onBlur={[Function]}
  onChange={[Function]}
  onFocus={[Function]}
  onKeyDown={[Function]}
  required={true}
  type="text"
  value="plan-activation"
/>
`;

exports[`containers/forms/PlanForm renders dynamic plans correctly: triggers inputs 11 1`] = `
<input
  className="ant-input form-control col-sm-10"
  disabled={false}
  id="activities[3].trigger[0].name"
  onBlur={[Function]}
  onChange={[Function]}
  onFocus={[Function]}
  onKeyDown={[Function]}
  required={true}
  type="text"
  value="plan-activation"
/>
`;

exports[`containers/forms/PlanForm renders dynamic plans correctly: triggers labels 0 1`] = `
<label
  className=""
  htmlFor="planForm_activities_0_trigger_0_name"
  title="Name"
>
  Name
</label>
`;

exports[`containers/forms/PlanForm renders dynamic plans correctly: triggers labels 1 1`] = `
<label
  className=""
  htmlFor="planForm_activities_0_trigger_0_name"
  title="Name"
>
  Name
</label>
`;

exports[`containers/forms/PlanForm renders dynamic plans correctly: triggers labels 2 1`] = `
<label
  className=""
  htmlFor="planForm_activities_0_trigger_0_name"
  title="Name"
>
  Name
</label>
`;

exports[`containers/forms/PlanForm renders dynamic plans correctly: triggers labels 3 1`] = `
Array [
  <label
    className=""
    htmlFor="planForm_activities_1_trigger_0_name"
    title="Name"
  >
    Name
  </label>,
  <label
    className=""
    htmlFor="planForm_activities_1_trigger_0_expression"
    title="Expression"
  >
    Expression
  </label>,
  <label
    className=""
    htmlFor="planForm_activities_1_trigger_0_description"
    title="Description"
  >
    Description
  </label>,
]
`;

exports[`containers/forms/PlanForm renders dynamic plans correctly: triggers labels 4 1`] = `
Array [
  <label
    className=""
    htmlFor="planForm_activities_1_trigger_0_name"
    title="Name"
  >
    Name
  </label>,
  <label
    className=""
    htmlFor="planForm_activities_1_trigger_0_expression"
    title="Expression"
  >
    Expression
  </label>,
  <label
    className=""
    htmlFor="planForm_activities_1_trigger_0_description"
    title="Description"
  >
    Description
  </label>,
]
`;

exports[`containers/forms/PlanForm renders dynamic plans correctly: triggers labels 5 1`] = `
Array [
  <label
    className=""
    htmlFor="planForm_activities_1_trigger_0_name"
    title="Name"
  >
    Name
  </label>,
  <label
    className=""
    htmlFor="planForm_activities_1_trigger_0_expression"
    title="Expression"
  >
    Expression
  </label>,
  <label
    className=""
    htmlFor="planForm_activities_1_trigger_0_description"
    title="Description"
  >
    Description
  </label>,
]
`;

exports[`containers/forms/PlanForm renders dynamic plans correctly: triggers labels 6 1`] = `
<label
  className=""
  htmlFor="planForm_activities_2_trigger_0_name"
  title="Name"
>
  Name
</label>
`;

exports[`containers/forms/PlanForm renders dynamic plans correctly: triggers labels 7 1`] = `
<label
  className=""
  htmlFor="planForm_activities_2_trigger_0_name"
  title="Name"
>
  Name
</label>
`;

exports[`containers/forms/PlanForm renders dynamic plans correctly: triggers labels 8 1`] = `
<label
  className=""
  htmlFor="planForm_activities_2_trigger_0_name"
  title="Name"
>
  Name
</label>
`;

exports[`containers/forms/PlanForm renders dynamic plans correctly: triggers labels 9 1`] = `
<label
  className=""
  htmlFor="planForm_activities_3_trigger_0_name"
  title="Name"
>
  Name
</label>
`;

exports[`containers/forms/PlanForm renders dynamic plans correctly: triggers labels 10 1`] = `
<label
  className=""
  htmlFor="planForm_activities_3_trigger_0_name"
  title="Name"
>
  Name
</label>
`;

exports[`containers/forms/PlanForm renders dynamic plans correctly: triggers labels 11 1`] = `
<label
  className=""
  htmlFor="planForm_activities_3_trigger_0_name"
  title="Name"
>
  Name
</label>
`;

exports[`containers/forms/PlanForm renders dynamic plans correctly: triggers legends 0 1`] = `
<legend>
  Triggers
</legend>
`;

exports[`containers/forms/PlanForm renders dynamic plans correctly: triggers legends 1 1`] = `
<legend>
  Triggers
</legend>
`;

exports[`containers/forms/PlanForm renders dynamic plans correctly: triggers legends 2 1`] = `
<legend>
  Triggers
</legend>
`;

exports[`containers/forms/PlanForm renders dynamic plans correctly: triggers legends 3 1`] = `
<legend>
  Triggers
</legend>
`;

exports[`containers/forms/PlanForm renders dynamic plans correctly: triggers legends 4 1`] = `
<legend>
  Triggers
</legend>
`;

exports[`containers/forms/PlanForm renders dynamic plans correctly: triggers legends 5 1`] = `
<legend>
  Triggers
</legend>
`;

exports[`containers/forms/PlanForm renders dynamic plans correctly: triggers legends 6 1`] = `
<legend>
  Triggers
</legend>
`;

exports[`containers/forms/PlanForm renders dynamic plans correctly: triggers legends 7 1`] = `
<legend>
  Triggers
</legend>
`;

exports[`containers/forms/PlanForm renders dynamic plans correctly: triggers legends 8 1`] = `
<legend>
  Triggers
</legend>
`;

exports[`containers/forms/PlanForm renders dynamic plans correctly: triggers legends 9 1`] = `
<legend>
  Triggers
</legend>
`;

exports[`containers/forms/PlanForm renders dynamic plans correctly: triggers legends 10 1`] = `
<legend>
  Triggers
</legend>
`;

exports[`containers/forms/PlanForm renders dynamic plans correctly: triggers legends 11 1`] = `
<legend>
  Triggers
</legend>
`;

exports[`containers/forms/PlanForm renders dynamic plans correctly: triggers textareas 0 1`] = `null`;

exports[`containers/forms/PlanForm renders dynamic plans correctly: triggers textareas 1 1`] = `null`;

exports[`containers/forms/PlanForm renders dynamic plans correctly: triggers textareas 2 1`] = `null`;

exports[`containers/forms/PlanForm renders dynamic plans correctly: triggers textareas 3 1`] = `
Array [
  <textarea
    className="ant-input form-control col-sm-10"
    disabled={false}
    id="activities[1].trigger[0].expression"
    onChange={[Function]}
    onKeyDown={[Function]}
    required={true}
    style={Object {}}
    value="questionnaire = 'Fix_Product_Problem'"
  />,
  <textarea
    className="ant-input form-control col-sm-10"
    disabled={false}
    id="activities[1].trigger[0].description"
    onChange={[Function]}
    onKeyDown={[Function]}
    required={false}
    style={Object {}}
    value="Trigger when a Fix Product event is submitted"
  />,
]
`;

exports[`containers/forms/PlanForm renders dynamic plans correctly: triggers textareas 4 1`] = `
Array [
  <textarea
    className="ant-input form-control col-sm-10"
    disabled={false}
    id="activities[1].trigger[0].expression"
    onChange={[Function]}
    onKeyDown={[Function]}
    required={true}
    style={Object {}}
    value="questionnaire = 'Fix_Product_Problem'"
  />,
  <textarea
    className="ant-input form-control col-sm-10"
    disabled={false}
    id="activities[1].trigger[0].description"
    onChange={[Function]}
    onKeyDown={[Function]}
    required={false}
    style={Object {}}
    value="Trigger when a Fix Product event is submitted"
  />,
]
`;

exports[`containers/forms/PlanForm renders dynamic plans correctly: triggers textareas 5 1`] = `
Array [
  <textarea
    className="ant-input form-control col-sm-10"
    disabled={false}
    id="activities[1].trigger[0].expression"
    onChange={[Function]}
    onKeyDown={[Function]}
    required={true}
    style={Object {}}
    value="questionnaire = 'Fix_Product_Problem'"
  />,
  <textarea
    className="ant-input form-control col-sm-10"
    disabled={false}
    id="activities[1].trigger[0].description"
    onChange={[Function]}
    onKeyDown={[Function]}
    required={false}
    style={Object {}}
    value="Trigger when a Fix Product event is submitted"
  />,
]
`;

exports[`containers/forms/PlanForm renders dynamic plans correctly: triggers textareas 6 1`] = `null`;

exports[`containers/forms/PlanForm renders dynamic plans correctly: triggers textareas 7 1`] = `null`;

exports[`containers/forms/PlanForm renders dynamic plans correctly: triggers textareas 8 1`] = `null`;

exports[`containers/forms/PlanForm renders dynamic plans correctly: triggers textareas 9 1`] = `null`;

exports[`containers/forms/PlanForm renders dynamic plans correctly: triggers textareas 10 1`] = `null`;

exports[`containers/forms/PlanForm renders dynamic plans correctly: triggers textareas 11 1`] = `null`;
